Some design modification

--- a/Password/target-eclipse/classes/.gitignore
+++ b/Password/target-eclipse/classes/.gitignore
@@ -87,6 +87,7 @@
 /UrlMappings$__clinit__closure1_closure3.class
 /UrlMappings$__clinit__closure1_closure3_closure6.class
 /UrlMappings.class
+/com
 /kickstart
 /resources$_run_closure1.class
 /resources.class
